Fixed Teachers title on smaller screens

--- a/styles/components/sections/Teachers.module.sass
+++ b/styles/components/sections/Teachers.module.sass
@@ -58,7 +58,7 @@
     color: #fff
     @include m.media(laptop, tablet, phone)
       margin-right: 0
-  
+
 .teachersPros
   color: #fff
   font-weight: bold
@@ -289,11 +289,11 @@
   line-height: 1.3
   color: #808080
   margin-top: 9px
-  @include m.media(desktop, laptop, tablet, phone)
+  @include m.media(desktop)
     position: static
     width: auto
     padding-right: 0
     margin-bottom: 20px
     margin-top: 0 !important
-  @include m.media(phone)
-    font-size: 18px
+  @include m.media(laptop, tablet, phone)
+    display: none
